Logger added
